--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ theme_name: ASIBUKA Group Theme
 title: "ASIBUKA Group"
 description: "ASIBUKA Group adalah usaha yang bergerak di bidang investasi di bidang UMKM baik offline maupun online, berbasis teknologi ataupun konvensional."
 baseurl: "/"
-url: "https://asibukagroup.github.io"
+url: "https://asibuka.com"
 author: "ASIBUKA Group"
 
 # Navigation links
