--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 theme_name: ASIBUKA Group Theme
 title: "ASIBUKA Group"
 description: "ASIBUKA Group adalah usaha yang bergerak di bidang investasi di bidang UMKM baik offline maupun online, berbasis teknologi ataupun konvensional."
-baseurl: "/"
+baseurl: "https://asibuka.com"
 url: "https://asibuka.com"
 author: "ASIBUKA Group"
 
