--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ description: "ASIBUKA Group adalah usaha yang bergerak di bidang investasi di bi
 baseurl: ""
 url: "https://asibuka.com"
 author: "ASIBUKA Group"
+thumbnail: "/assets/img/ASIBUKA-Blue.png"
 
 # Navigation links
 nav_links:
