--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: "ASIBUKA Group adalah usaha yang bergerak di bidang investasi di bi
 baseurl: ""
 url: "https://asibuka.com"
 author: "ASIBUKA Group"
-thumbnail: "https://example.com//assets/img/ASIBUKA-Blue.png"
+thumbnail: "https://asibuka.com/assets/img/ASIBUKA-Blue.png"
 
 # Navigation links
 nav_links:
