--- a/_config.yml
+++ b/_config.yml
@@ -6,6 +6,7 @@ author: "ASIBUKA Group"
 thumbnail: "https://asibuka.com/assets/img/ASIBUKA-Blue.png"
 keywords: "ASIBUKA, ASIBUKA Group, Bisnis, Investasi, UMKM"
 robots: "index, follow"
+lang: "id"
 
 # Navigation links
 nav_links:
