--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 theme_name: ASIBUKA Group Theme
+defaults:
 title: "ASIBUKA Group"
 description: "ASIBUKA Group adalah usaha yang bergerak di bidang investasi di bidang UMKM baik offline maupun online, berbasis teknologi ataupun konvensional."
 url: "https://asibuka.com"
