--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
 theme_name: ASIBUKA Group Theme
-defaults:
 title: "ASIBUKA Group"
 description: "ASIBUKA Group adalah usaha yang bergerak di bidang investasi di bidang UMKM baik offline maupun online, berbasis teknologi ataupun konvensional."
 url: "https://asibuka.com"
@@ -8,6 +7,17 @@ thumbnail: "https://asibuka.com/assets/img/ASIBUKA-Blue.png"
 keywords: "ASIBUKA, ASIBUKA Group, Bisnis, Investasi, UMKM"
 robots: "index, follow"
 lang: "id"
+
+# Default Value
+defaults:
+  title: "ASIBUKA Group"
+  description: "ASIBUKA Group adalah usaha yang bergerak di bidang investasi di bidang UMKM baik offline maupun online, berbasis teknologi ataupun konvensional."
+  url: "https://asibuka.com"
+  author: "ASIBUKA Group"
+  thumbnail: "https://asibuka.com/assets/img/ASIBUKA-Blue.png"
+  keywords: "ASIBUKA, ASIBUKA Group, Bisnis, Investasi, UMKM"
+  robots: "index, follow"
+  lang: "id"
 
 # Navigation links
 nav_links:
