--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ thumbnail: "https://asibuka.com/assets/img/ASIBUKA-Blue.png"
 keywords: "ASIBUKA, ASIBUKA Group, Bisnis, Investasi, UMKM"
 robots: "index, follow"
 lang: "id"
+disqus_shortname: asibukagroup
 
 # Default Value
 defaults:
@@ -18,6 +19,7 @@ defaults:
   keywords: "ASIBUKA, ASIBUKA Group, Bisnis, Investasi, UMKM"
   robots: "index, follow"
   lang: "id"
+  disqus_shortname: asibukagroup
 
 # Navigation links
 nav_links:
