--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ nav_links:
   Hak Cipta: "/dmca/"
   Hubungi Kami: "/contact/"
   Kebijakan Privasi: "/kebijakan-privasi/"
+  Laman Diskusi: "/discussion/"
   Peta Situs: "/sitemap/"
   Syarat dan Ketentuan: "/terms-and-conditions/"
   Tentang Kami: "/about/"
