--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ nav_links:
   Hak Cipta: "/hak-cipta/"
   Hubungi Kami: "/contact/"
   Kebijakan Privasi: "/kebijakan-privasi/"
-  Laman Diskusi: "/discussion/"
+  Laman Diskusi: "/diskusi/"
   Peta Situs: "/sitemap/"
   Syarat dan Ketentuan: "/terms-and-conditions/"
   Tentang Kami: "/about/"
