--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,6 @@ nav_links:
   Hubungi Kami: "/contact/"
   Kebijakan Privasi: "/kebijakan-privasi/"
   Laman Diskusi: "/diskusi/"
-  Peta Situs: "/sitemap/"
+  Peta Situs: "/peta-situs/"
   Syarat dan Ketentuan: "/terms-and-conditions/"
   Tentang Kami: "/about/"
