--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ defaults:
   robots: "index, follow"
   lang: "id"
   disqus_shortname: "asibukagroup"
+  date: 2025-04-02 10:00:00
 
 # Navigation links
 nav_links:
