--- a/_config.yml
+++ b/_config.yml
@@ -32,4 +32,4 @@ nav_links:
   Laman Diskusi: "/diskusi/"
   Peta Situs: "/peta-situs/"
   Syarat dan Ketentuan: "/terms-and-conditions/"
-  Tentang Kami: "/about/"
+  Tentang Kami: "/tentang-kami/"
