--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,10 @@ defaults:
   lang: "id"
   disqus_shortname: "asibukagroup"
   date: 2025-04-02 00:00:05
+  - scope:
+    path: "sw.js.liquid"
+    values:
+      permalink: "/sw.js"
 
 # Navigation links
 nav_links:
