--- a/_config.yml
+++ b/_config.yml
@@ -13,18 +13,22 @@ future: true
 
 # Default Value
 defaults:
-  title: "ASIBUKA Group"
-  description: "ASIBUKA Group adalah usaha yang bergerak di bidang investasi di bidang UMKM baik offline maupun online, berbasis teknologi ataupun konvensional."
-  url: "https://asibuka.com"
-  author: "ASIBUKA Group"
-  thumbnail: "https://asibuka.com/assets/img/ASIBUKA-Blue.png"
-  keywords: "ASIBUKA, ASIBUKA Group, Bisnis, Investasi, UMKM"
-  robots: "index, follow"
-  lang: "id"
-  disqus_shortname: "asibukagroup"
-  date: 2025-04-02 00:00:05
   - scope:
-    path: "sw.js.liquid"
+      path: ""  # Applies to all files
+    values:
+      title: "ASIBUKA Group"
+      description: "ASIBUKA Group adalah usaha yang bergerak di bidang investasi di bidang UMKM baik offline maupun online, berbasis teknologi ataupun konvensional."
+      url: "https://asibuka.com"
+      author: "ASIBUKA Group"
+      thumbnail: "https://asibuka.com/assets/img/ASIBUKA-Blue.png"
+      keywords: "ASIBUKA, ASIBUKA Group, Bisnis, Investasi, UMKM"
+      robots: "index, follow"
+      lang: "id"
+      disqus_shortname: "asibukagroup"
+      date: 2025-04-02 00:00:05
+
+  - scope:
+      path: "sw.js.liquid"  # Ensure Jekyll processes this file
     values:
       permalink: "/sw.js"
 
