--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ defaults:
       date: 2025-04-02 00:00:05
 
   - scope:
-      path: "sw.js.liquid"  # Ensure Jekyll processes this file
+      path: "_includes/sw.js.liquid"
     values:
       permalink: "/sw.js"
 
