--- a/_config.yml
+++ b/_config.yml
@@ -39,5 +39,5 @@ nav_links:
   Kebijakan Privasi: "/kebijakan-privasi/"
   Laman Diskusi: "/diskusi/"
   Peta Situs: "/peta-situs/"
-  Syarat dan Ketentuan: "/terms-and-conditions/"
+  Syarat dan Ketentuan: "/syarat-ketentuan/"
   Tentang Kami: "/tentang-kami/"
