--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,13 @@ future: true
 # Default Value
 defaults:
   - scope:
-      path: ""  # Applies to all files
+      path: ""
     values:
+      amp_mode: false
+  - scope:
+      path: "_posts"
+    values:
+      amp: true
       title: "ASIBUKA Group"
       description: "ASIBUKA Group adalah usaha yang bergerak di bidang investasi di bidang UMKM baik offline maupun online, berbasis teknologi ataupun konvensional."
       url: "https://asibuka.com"
