--- a/_config.yml
+++ b/_config.yml
@@ -10,32 +10,29 @@ lang: "id"
 disqus_shortname: "asibukagroup"
 permalink: /:title/
 future: true
+collections:
+  amp:
+    output: true
+    permalink: "/amp/:path/"
 
 # Default Value
 defaults:
   - scope:
       path: ""
+      type: "amp"
     values:
-      amp_mode: false
-  - scope:
-      path: "_posts"
-    values:
+      layout: "amp"
       amp: true
-      title: "ASIBUKA Group"
-      description: "ASIBUKA Group adalah usaha yang bergerak di bidang investasi di bidang UMKM baik offline maupun online, berbasis teknologi ataupun konvensional."
-      url: "https://asibuka.com"
-      author: "ASIBUKA Group"
-      thumbnail: "https://asibuka.com/assets/img/ASIBUKA-Blue.png"
-      keywords: "ASIBUKA, ASIBUKA Group, Bisnis, Investasi, UMKM"
-      robots: "index, follow"
-      lang: "id"
-      disqus_shortname: "asibukagroup"
-      date: 2025-04-02 00:00:05
-
-  - scope:
-      path: "_includes/sw.js.liquid"
-    values:
-      permalink: "/sw.js"
+  title: "ASIBUKA Group"
+  description: "ASIBUKA Group adalah usaha yang bergerak di bidang investasi di bidang UMKM baik offline maupun online, berbasis teknologi ataupun konvensional."
+  url: "https://asibuka.com"
+  author: "ASIBUKA Group"
+  thumbnail: "https://asibuka.com/assets/img/ASIBUKA-Blue.png"
+  keywords: "ASIBUKA, ASIBUKA Group, Bisnis, Investasi, UMKM"
+  robots: "index, follow"
+  lang: "id"
+  disqus_shortname: "asibukagroup"
+  date: 2025-04-02 00:00:05
 
 # Navigation links
 nav_links:
