--- a/_config.yml
+++ b/_config.yml
@@ -18,10 +18,18 @@ collections:
 # Default Value
 defaults:
   - scope:
-      path: ""
-      type: "amp"
+      path: "_posts"
+      type: "posts"
+    values:
+      layout: "post"
+      amp: false
+
+  - scope:
+      path: "_posts"
+      type: "posts"
     values:
       layout: "amp"
+      permalink: "/:title/amp/"
       amp: true
     title: "ASIBUKA Group"
     description: "ASIBUKA Group adalah usaha yang bergerak di bidang investasi di bidang UMKM baik offline maupun online, berbasis teknologi ataupun konvensional."
