--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ lang: "id"
 disqus_shortname: "asibukagroup"
 permalink: /:title/
 future: true
+amp: true
 
 # Default Value
 defaults:
@@ -17,10 +18,6 @@ defaults:
       path: ""
     values:
       permalink: /:title/
-  - scope:
-      path: "_includes/sw.js.liquid"
-  - scope:
-      path: "_layouts/amp.html"
     values:
       permalink: "?amp=1"
     values:
