--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: "ASIBUKA Group"
 description: "ASIBUKA Group adalah usaha yang bergerak di bidang investasi di bidang UMKM baik offline maupun online, berbasis teknologi ataupun konvensional."
 url: "https://asibuka.com"
 author: "ASIBUKA Group"
-thumbnail: "https://asibuka.com/assets/img/ASIBUKA-Blue.png"
+thumbnail: "https://asibuka.com/assets/img/ASIBUKA-Blue.webp"
 keywords: "ASIBUKA, ASIBUKA Group, Bisnis, Investasi, UMKM"
 robots: "index, follow"
 lang: "id"
