--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ robots: "index, follow"
 baseurl: ""
 url: "https://asibuka.com/"
 permalink: /:title/
-thumbnail: "https://asibuka.com/assets/img/ASIBUKA-Blue.webp"
+image: "https://asibuka.com/assets/img/ASIBUKA-Blue.webp"
 date: 2023-06-19 00:00:05
 timezone: "Asia/Jakarta"
 robots: "index, follow"
@@ -33,6 +33,8 @@ paginate_path: "/page:num/"
 disqus_shortname: "asibukagroup"
 future: true
 amp: false
+feed:
+  path: ""
 
 # ------------------------------
 # Default Value
