--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -3,16 +3,12 @@ name: Build and Deploy Jekyll site to GitHub Pages
 on:
   push:
     branches:
-      - main  # or 'master' if you're using that branch
+      - main  # Change if you're using a different default branch
 
 permissions:
   contents: read
   pages: write
   id-token: write
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
 
 jobs:
   build:
@@ -25,19 +21,20 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.2' # or the version you need
+          ruby-version: '3.2'
           bundler-cache: true
 
       - name: Install dependencies
         run: bundle install
 
-      - name: Build site
+      - name: Build Jekyll site
         run: bundle exec jekyll build
 
-      - name: Upload build artifacts
-        uses: actions/upload-pages-artifact@v2
+      - name: Upload artifact
+        uses: actions/upload-artifact@v3
         with:
-          path: ./_site
+          name: github-pages
+          path: _site
 
   deploy:
     needs: build
@@ -47,6 +44,12 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
 
     steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: github-pages
+          path: _site
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
