--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -32,10 +32,10 @@ jobs:
           bundle install
 
       - name: Build Jekyll site
-        run: bundle exec jekyll build
+        run: bundle exec jekyll build --destination _site
 
       - name: Upload artifact
-        uses: upload-artifact@v3
+        uses: actions/upload-pages-artifact@v2
         with:
           path: ./_site
 
