--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -31,11 +31,11 @@ jobs:
           gem install bundler
           bundle install
 
-      - name: Build Jekyll site
-        run: bundle exec jekyll build -d ./_site
+      - name: Build site
+        run: bundle exec jekyll build -d _site
 
-      - name: Upload build output
-        uses: actions/upload-artifact@v3
+      - name: Upload GitHub Pages artifact
+        uses: actions/upload-pages-artifact@v2
         with:
           path: ./_site
 
