--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-theme_name: ASIBUKA Group Theme
+theme_name: ASIBUKA
 # ------------------------------
 # 🌐 Site Information
 # ------------------------------
