--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install dependencies
         run: |
           gem install bundler
-          bundle install --verbose
+          bundle install
 
       - name: Build Jekyll site
         run: bundle exec jekyll build
