--- a/_config.yml
+++ b/_config.yml
@@ -58,6 +58,12 @@ defaults:
       path: "sw.js"
     values:
       permalink: "/sw.js"
+  - scope:
+      path: ""
+      type: amp
+    values:
+      layout: amp
+      permalink: /:title/amp/
 # ------------------------------
 # Navigation links
 # ------------------------------
