--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -26,6 +26,9 @@ jobs:
       - name: Install bundler
         run: gem install bundler
 
+      - name: Add Linux platform for Bundler
+        run: bundle lock --add-platform x86_64-linux
+
       - name: Install dependencies
         run: bundle install
 
