--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -9,6 +9,10 @@ permissions:
   pages: write
   id-token: write
 
+  concurrency:
+  group: "pages"
+  cancel-in-progress: true
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -33,7 +37,10 @@ jobs:
         run: bundle install
 
       - name: Build Jekyll site
-        run: bundle exec jekyll build --trace
+        run: bundle exec jekyll build
+      
+      - name: Build AMP version
+        run: bundle exec jekyll build --config _config.yml,_config.amp.yml
 
       - name: Upload GitHub Pages artifact
         uses: actions/upload-pages-artifact@v3
