--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -40,7 +40,7 @@ jobs:
         run: bundle exec jekyll build
       
       - name: Build AMP version
-        run: bundle exec jekyll build --config _config.yml,_config_amp.yml
+        run: bundle exec jekyll build --config _config.yml
 
       - name: Upload GitHub Pages artifact
         uses: actions/upload-pages-artifact@v3
