--- a/_config.yml
+++ b/_config.yml
@@ -35,6 +35,11 @@ safe: false
 # ------------------------------
 defaults:
   - scope:
+      path: ""
+      type: posts
+    values:
+      layout: post
+  - scope:
       path: "sitemap.xml"
     values:
       permalink: "/sitemap.xml"
