--- a/_config.yml
+++ b/_config.yml
@@ -59,6 +59,10 @@ defaults:
       path: "sw.js"
     values:
       permalink: "/sw.js"
+  - scope:
+      path: "_includes/robots.txt"
+    values:
+      permalink: "/robots.txt"
 # ------------------------------
 # Navigation links
 # ------------------------------
