--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: "ASIBUKA Group adalah usaha yang bergerak di bidang investasi UMKM 
 keywords: "ASIBUKA, ASIBUKA Group, Bisnis, Investasi, UMKM"
 robots: "index, follow"
 baseurl: ""
-url: "https://asibuka.com"
+url: "https://www.asibuka.com"
 image: "https://asibuka.com/assets/img/ASIBUKA-Blue.webp"
 date: 2023-06-19 00:00:05
 timezone: "Asia/Jakarta"
