--- a/_config.yml
+++ b/_config.yml
@@ -9,6 +9,7 @@ theme_name: ASIBUKA
 # 6. All pages and posts are well-layouted
 # 7. All pages and posts have well configuration for SEO
 # 8. All pages and posts have well-structured Schema metadata
+# 9. All pages and posts 
 # ------------------------------
 # ------------------------------
 # 🌐 Site Information
